--- a/style.css
+++ b/style.css
@@ -1,10 +1,59 @@
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
+
 html {
-    box-sizing: border-box;
-    
+  box-sizing: border-box;
 }
 
-body{
-    margin: 0;
-    min-height: 100vh;
-    
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%230044ff' fill-opacity='1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+  color: white;     
+  font-family: 'Staatliches', cursive; 
+  font-weight: 100;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.quote-container{
+    width: auto;
+    max-width: 900px;
+    padding: 20px 30px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.9);
+}
+
+.quote-text{
+    font-size: 2.75rem;
+}
+
+.long-quote{
+    font-size: 2rem;
+}
+
+.fa-quote-left{
+    font-size: 4rem;
+}
+
+.quote-author{
+    margin-top: 15px;
+    font-size: 2rem;
+    font-weight: 400;
+    font-style: italic;
+}
+
+
+/* Media Query for Mobile devices */
+
+@media screen and (max-width:1000px) {
+    .quote-container {
+        margin: auto 10px;
+    }
+  .quote-text{
+      font-size: 2.5rem;
+  }  
+} 
