--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
   min-height: 100vh;
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%230044ff' fill-opacity='1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-  color: white;     
-  font-family: 'Staatliches', cursive; 
+  color: white;
+  font-family: "Staatliches", cursive;
   font-weight: 100;
   text-align: center;
   display: flex;
@@ -18,94 +18,97 @@ body {
   justify-content: center;
 }
 
-.quote-container{
-    width: auto;
-    max-width: 900px;
-    padding: 20px 30px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.9);
+.quote-container {
+  width: auto;
+  max-width: 900px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.9);
 }
 
-.quote-text{
-    font-size: 2.75rem;
+.quote-text {
+  font-size: 2.75rem;
 }
 
-.long-quote{
-    font-size: 2rem;
+.long-quote {
+  font-size: 2rem;
 }
 
-.fa-quote-left{
-    font-size: 4rem;
+.fa-quote-left {
+  font-size: 4rem;
 }
 
-.quote-author{
-    margin-top: 15px;
-    font-size: 2rem;
-    font-weight: 400;
-    font-style: italic;
+.quote-author {
+  margin-top: 15px;
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: italic;
 }
 
-.button-container{
-    margin-top: 15px;
-    display: flex;
-    justify-content: space-between;
+.button-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
-    cursor: pointer;
-    font-size: 1.2rem;
-    height: 2.5rem;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    outline: none;
-    background: #333;
-    padding: 0.5rem 1.8rem;
-    box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  outline: none;
+  background: #333;
+  padding: 0.5rem 1.8rem;
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
 }
 
-button:hover{
-    filter: brightness(110%);
+button:hover {
+  filter: brightness(110%);
 }
 
-button:active{
-    transform: translate(0,0.3rem);
-    box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
+button:active {
+  transform: translate(0, 0.3rem);
+  box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
 }
 
-.twitter-button:hover{
-    color: #38a1f3;
-
+.twitter-button:hover {
+  color: #38a1f3;
 }
 
-.fa-twitter{
-    font-size: 1.5rem;
+.fa-twitter {
+  font-size: 1.5rem;
 }
 
 /* Loader */
 
 .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #333; /* Blue */
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    animation: spin 2s linear infinite;
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #333; /* Blue */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg);
   }
+}
 
 /* Media Query for Mobile devices */
 
-@media screen and (max-width:1000px) {
-    .quote-container {
-        margin: auto 10px;
-    }
-  .quote-text{
-      font-size: 2.5rem;
-  }  
-} 
+@media screen and (max-width: 1000px) {
+  .quote-container {
+    margin: auto 10px;
+  }
+  .quote-text {
+    font-size: 2.5rem;
+  }
+}
